[package]
name = "secrust"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust crate for source-level verification using Weakest Precondition calculus."
repository = "https://github.com/vasilevlaicu/secrust"
documentation = "https://docs.rs/secrust"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
petgraph = "0.6"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
z3 = "0.12.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-secrust-verify"
path = "src/main.rs"
